# computer_graphic_lab1

./: CMakeLists.txt  main.cpp
